Fix the scroll on mobile

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
   font-family: Fira, Consolas;
   touch-action: none;
-  -webkit-overflow-scrolling: touch;
+  overflow: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 @font-face {
